sdk_tests/tests/state-macro-fail/generic_state_name_collide_type.stderr
error: proc-macro derive panicked
 --> tests/state-macro-fail/generic_state_name_collide_type.rs:5:10
  |
5 | #[derive(ReadWriteState)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: Type name ReadSomeState collides with generated type name.
