sdk_tests/tests/state-macro-fail/generic_state_name_collide_type.rs
#![no_main]
use pbc_traits::ReadWriteState;
use read_write_state_derive::ReadWriteState;

#[derive(ReadWriteState)]
struct SomeState<ReadSomeState: ReadWriteState> {
    state_data: ReadSomeState,
}
